--- a/Skręt Jądra/page1.html
+++ b/Skręt Jądra/page1.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-    
+    <h1>this shit still in construction fella</h1>
+    <img src="45455628-angry-construction-worker-with-a-hammer.jpg">
 </body>
 </html>
